--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ flask-session = "^0.8.0"
 flask-login = "^0.6.3"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
+flask-sqlalchemy = "^3.1.1"
+shell = "^1.0.1"
+flask-shell-ipython = "^0.5.3"
+flask-migrate = "^4.1.0"
+black = "^25.1.0"
 
 
 [build-system]
